crates/capi/include/edgefirst/schemas.h

/** @brief Opaque builder handle for geometry_msgs_transform_stamped_t messages. */
typedef struct geometry_msgs_transform_stamped_builder_s geometry_msgs_transform_stamped_builder_t;
geometry_msgs_transform_stamped_builder_t* geometry_msgs_transform_stamped_builder_new(void);
void geometry_msgs_transform_stamped_builder_free(geometry_msgs_transform_stamped_builder_t* b);
void geometry_msgs_transform_stamped_builder_set_stamp(geometry_msgs_transform_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_transform_stamped_builder_set_frame_id(geometry_msgs_transform_stamped_builder_t* b, const char* s);
int  geometry_msgs_transform_stamped_builder_set_child_frame_id(geometry_msgs_transform_stamped_builder_t* b, const char* s);
void geometry_msgs_transform_stamped_builder_set_translation(geometry_msgs_transform_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_transform_stamped_builder_set_rotation(geometry_msgs_transform_stamped_builder_t* b, double x, double y, double z, double w);
int  geometry_msgs_transform_stamped_builder_encode_into(geometry_msgs_transform_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_pose_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_pose_with_covariance_stamped_builder_s geometry_msgs_pose_with_covariance_stamped_builder_t;
geometry_msgs_pose_with_covariance_stamped_builder_t* geometry_msgs_pose_with_covariance_stamped_builder_new(void);
void geometry_msgs_pose_with_covariance_stamped_builder_free(geometry_msgs_pose_with_covariance_stamped_builder_t* b);
void geometry_msgs_pose_with_covariance_stamped_builder_set_stamp(geometry_msgs_pose_with_covariance_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_pose_with_covariance_stamped_builder_set_frame_id(geometry_msgs_pose_with_covariance_stamped_builder_t* b, const char* s);
void geometry_msgs_pose_with_covariance_stamped_builder_set_position(geometry_msgs_pose_with_covariance_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_pose_with_covariance_stamped_builder_set_orientation(geometry_msgs_pose_with_covariance_stamped_builder_t* b, double x, double y, double z, double w);
int  geometry_msgs_pose_with_covariance_stamped_builder_set_covariance(geometry_msgs_pose_with_covariance_stamped_builder_t* b, const double* cov);
int  geometry_msgs_pose_with_covariance_stamped_builder_encode_into(geometry_msgs_pose_with_covariance_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_twist_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_twist_with_covariance_stamped_builder_s geometry_msgs_twist_with_covariance_stamped_builder_t;
geometry_msgs_twist_with_covariance_stamped_builder_t* geometry_msgs_twist_with_covariance_stamped_builder_new(void);
void geometry_msgs_twist_with_covariance_stamped_builder_free(geometry_msgs_twist_with_covariance_stamped_builder_t* b);
void geometry_msgs_twist_with_covariance_stamped_builder_set_stamp(geometry_msgs_twist_with_covariance_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_twist_with_covariance_stamped_builder_set_frame_id(geometry_msgs_twist_with_covariance_stamped_builder_t* b, const char* s);
void geometry_msgs_twist_with_covariance_stamped_builder_set_linear(geometry_msgs_twist_with_covariance_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_twist_with_covariance_stamped_builder_set_angular(geometry_msgs_twist_with_covariance_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_twist_with_covariance_stamped_builder_set_covariance(geometry_msgs_twist_with_covariance_stamped_builder_t* b, const double* cov);
int  geometry_msgs_twist_with_covariance_stamped_builder_encode_into(geometry_msgs_twist_with_covariance_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_accel_with_covariance_stamped_t messages. */
typedef struct geometry_msgs_accel_with_covariance_stamped_builder_s geometry_msgs_accel_with_covariance_stamped_builder_t;
geometry_msgs_accel_with_covariance_stamped_builder_t* geometry_msgs_accel_with_covariance_stamped_builder_new(void);
void geometry_msgs_accel_with_covariance_stamped_builder_free(geometry_msgs_accel_with_covariance_stamped_builder_t* b);
void geometry_msgs_accel_with_covariance_stamped_builder_set_stamp(geometry_msgs_accel_with_covariance_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_accel_with_covariance_stamped_builder_set_frame_id(geometry_msgs_accel_with_covariance_stamped_builder_t* b, const char* s);
void geometry_msgs_accel_with_covariance_stamped_builder_set_linear_acceleration(geometry_msgs_accel_with_covariance_stamped_builder_t* b, double x, double y, double z);
void geometry_msgs_accel_with_covariance_stamped_builder_set_angular_acceleration(geometry_msgs_accel_with_covariance_stamped_builder_t* b, double x, double y, double z);
int  geometry_msgs_accel_with_covariance_stamped_builder_set_covariance(geometry_msgs_accel_with_covariance_stamped_builder_t* b, const double* cov);
int  geometry_msgs_accel_with_covariance_stamped_builder_encode_into(geometry_msgs_accel_with_covariance_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_polygon_t messages. */
typedef struct geometry_msgs_polygon_builder_s geometry_msgs_polygon_builder_t;
geometry_msgs_polygon_builder_t* geometry_msgs_polygon_builder_new(void);
void geometry_msgs_polygon_builder_free(geometry_msgs_polygon_builder_t* b);
/**
 * @brief Set the polygon vertices.
 *
 *  @p xyz points at @p count contiguous Point32 values (x, y, z per point;
 *  @p count * 3 floats). The pointer is borrowed and must stay valid until
 *  build/encode_into. Passing NULL with count == 0 clears the points; NULL
 *  with count > 0 returns -1 (errno: EINVAL). Returns 0 on success.
 */
int  geometry_msgs_polygon_builder_set_points(geometry_msgs_polygon_builder_t* b, const float* xyz, size_t count);
int  geometry_msgs_polygon_builder_encode_into(geometry_msgs_polygon_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_polygon_stamped_t messages. */
typedef struct geometry_msgs_polygon_stamped_builder_s geometry_msgs_polygon_stamped_builder_t;
geometry_msgs_polygon_stamped_builder_t* geometry_msgs_polygon_stamped_builder_new(void);
void geometry_msgs_polygon_stamped_builder_free(geometry_msgs_polygon_stamped_builder_t* b);
void geometry_msgs_polygon_stamped_builder_set_stamp(geometry_msgs_polygon_stamped_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_polygon_stamped_builder_set_frame_id(geometry_msgs_polygon_stamped_builder_t* b, const char* s);
/**
 * @brief Set the polygon vertices.
 *
 *  @p xyz points at @p count contiguous Point32 values (x, y, z per point;
 *  @p count * 3 floats). The pointer is borrowed and must stay valid until
 *  build/encode_into. Passing NULL with count == 0 clears the points; NULL
 *  with count > 0 returns -1 (errno: EINVAL). Returns 0 on success.
 */
int  geometry_msgs_polygon_stamped_builder_set_points(geometry_msgs_polygon_stamped_builder_t* b, const float* xyz, size_t count);
int  geometry_msgs_polygon_stamped_builder_encode_into(geometry_msgs_polygon_stamped_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for geometry_msgs_pose_array_t messages. */
typedef struct geometry_msgs_pose_array_builder_s geometry_msgs_pose_array_builder_t;
geometry_msgs_pose_array_builder_t* geometry_msgs_pose_array_builder_new(void);
void geometry_msgs_pose_array_builder_free(geometry_msgs_pose_array_builder_t* b);
void geometry_msgs_pose_array_builder_set_stamp(geometry_msgs_pose_array_builder_t* b, int32_t sec, uint32_t nanosec);
int  geometry_msgs_pose_array_builder_set_frame_id(geometry_msgs_pose_array_builder_t* b, const char* s);
/**
 * @brief Set the pose sequence.
 *
 *  @p poses points at @p count contiguous Pose values (7 doubles per pose:
 *  px, py, pz, ox, oy, oz, ow). The pointer is borrowed and must stay valid
 *  until build/encode_into. Passing NULL with count == 0 clears the poses;
 *  NULL with count > 0 returns -1 (errno: EINVAL). Returns 0 on success.
 */
int  geometry_msgs_pose_array_builder_set_poses(geometry_msgs_pose_array_builder_t* b, const double* poses, size_t count);
int  geometry_msgs_pose_array_builder_encode_into(geometry_msgs_pose_array_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for nav_msgs_odometry_t messages. */
typedef struct nav_msgs_odometry_builder_s nav_msgs_odometry_builder_t;
nav_msgs_odometry_builder_t* nav_msgs_odometry_builder_new(void);
void nav_msgs_odometry_builder_free(nav_msgs_odometry_builder_t* b);
void nav_msgs_odometry_builder_set_stamp(nav_msgs_odometry_builder_t* b, int32_t sec, uint32_t nanosec);
int  nav_msgs_odometry_builder_set_frame_id(nav_msgs_odometry_builder_t* b, const char* s);
int  nav_msgs_odometry_builder_set_child_frame_id(nav_msgs_odometry_builder_t* b, const char* s);
void nav_msgs_odometry_builder_set_pose(nav_msgs_odometry_builder_t* b,
                                   double px, double py, double pz,
                                   double ox, double oy, double oz, double ow);
int  nav_msgs_odometry_builder_set_pose_covariance(nav_msgs_odometry_builder_t* b, const double* cov);
void nav_msgs_odometry_builder_set_twist(nav_msgs_odometry_builder_t* b,
                                    double lx, double ly, double lz,
                                    double ax, double ay, double az);
int  nav_msgs_odometry_builder_set_twist_covariance(nav_msgs_odometry_builder_t* b, const double* cov);
int  nav_msgs_odometry_builder_build(nav_msgs_odometry_builder_t* b, uint8_t** out_bytes, size_t* out_len);
int  nav_msgs_odometry_builder_encode_into(nav_msgs_odometry_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_altitude_t messages. */
typedef struct mavros_msgs_altitude_builder_s mavros_msgs_altitude_builder_t;
mavros_msgs_altitude_builder_t* mavros_msgs_altitude_builder_new(void);
void mavros_msgs_altitude_builder_free(mavros_msgs_altitude_builder_t* b);
void mavros_msgs_altitude_builder_set_stamp(mavros_msgs_altitude_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_altitude_builder_set_frame_id(mavros_msgs_altitude_builder_t* b, const char* s);
void mavros_msgs_altitude_builder_set_monotonic(mavros_msgs_altitude_builder_t* b, float v);
void mavros_msgs_altitude_builder_set_amsl(mavros_msgs_altitude_builder_t* b, float v);
void mavros_msgs_altitude_builder_set_local(mavros_msgs_altitude_builder_t* b, float v);
void mavros_msgs_altitude_builder_set_relative(mavros_msgs_altitude_builder_t* b, float v);
void mavros_msgs_altitude_builder_set_terrain(mavros_msgs_altitude_builder_t* b, float v);
void mavros_msgs_altitude_builder_set_bottom_clearance(mavros_msgs_altitude_builder_t* b, float v);
int  mavros_msgs_altitude_builder_encode_into(mavros_msgs_altitude_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_vfrhud_t messages. */
typedef struct mavros_msgs_vfrhud_builder_s mavros_msgs_vfrhud_builder_t;
mavros_msgs_vfrhud_builder_t* mavros_msgs_vfrhud_builder_new(void);
void mavros_msgs_vfrhud_builder_free(mavros_msgs_vfrhud_builder_t* b);
void mavros_msgs_vfrhud_builder_set_stamp(mavros_msgs_vfrhud_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_vfrhud_builder_set_frame_id(mavros_msgs_vfrhud_builder_t* b, const char* s);
void mavros_msgs_vfrhud_builder_set_airspeed(mavros_msgs_vfrhud_builder_t* b, float v);
void mavros_msgs_vfrhud_builder_set_groundspeed(mavros_msgs_vfrhud_builder_t* b, float v);
void mavros_msgs_vfrhud_builder_set_heading(mavros_msgs_vfrhud_builder_t* b, int16_t v);
void mavros_msgs_vfrhud_builder_set_throttle(mavros_msgs_vfrhud_builder_t* b, float v);
void mavros_msgs_vfrhud_builder_set_altitude(mavros_msgs_vfrhud_builder_t* b, float v);
void mavros_msgs_vfrhud_builder_set_climb(mavros_msgs_vfrhud_builder_t* b, float v);
int  mavros_msgs_vfrhud_builder_encode_into(mavros_msgs_vfrhud_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);