crates/capi/tests/geometry_mavros_builder_smoke.rs


    fn geometry_msgs_transform_stamped_builder_new(
    ) -> *mut geometry_msgs_transform_stamped_builder_t;
    fn geometry_msgs_transform_stamped_builder_free(
        b: *mut geometry_msgs_transform_stamped_builder_t,
    );
    fn geometry_msgs_transform_stamped_builder_set_stamp(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_transform_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_transform_stamped_builder_set_child_frame_id(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_transform_stamped_builder_set_translation(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_transform_stamped_builder_set_rotation(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
        w: f64,
    );
    fn geometry_msgs_transform_stamped_builder_encode_into(
        b: *mut geometry_msgs_transform_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_pose_with_covariance_stamped_builder_new(
    ) -> *mut geometry_msgs_pose_with_covariance_stamped_builder_t;
    fn geometry_msgs_pose_with_covariance_stamped_builder_free(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
    );
    fn geometry_msgs_pose_with_covariance_stamped_builder_set_stamp(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_pose_with_covariance_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_pose_with_covariance_stamped_builder_set_position(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_pose_with_covariance_stamped_builder_set_orientation(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
        w: f64,
    );
    fn geometry_msgs_pose_with_covariance_stamped_builder_set_covariance(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        cov: *const f64,
    ) -> i32;
    fn geometry_msgs_pose_with_covariance_stamped_builder_encode_into(
        b: *mut geometry_msgs_pose_with_covariance_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_twist_with_covariance_stamped_builder_new(
    ) -> *mut geometry_msgs_twist_with_covariance_stamped_builder_t;
    fn geometry_msgs_twist_with_covariance_stamped_builder_free(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
    );
    fn geometry_msgs_twist_with_covariance_stamped_builder_set_stamp(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_twist_with_covariance_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_twist_with_covariance_stamped_builder_set_linear(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_twist_with_covariance_stamped_builder_set_angular(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_twist_with_covariance_stamped_builder_set_covariance(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        cov: *const f64,
    ) -> i32;
    fn geometry_msgs_twist_with_covariance_stamped_builder_encode_into(
        b: *mut geometry_msgs_twist_with_covariance_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_accel_with_covariance_stamped_builder_new(
    ) -> *mut geometry_msgs_accel_with_covariance_stamped_builder_t;
    fn geometry_msgs_accel_with_covariance_stamped_builder_free(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
    );
    fn geometry_msgs_accel_with_covariance_stamped_builder_set_stamp(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_accel_with_covariance_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_accel_with_covariance_stamped_builder_set_linear_acceleration(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_accel_with_covariance_stamped_builder_set_angular_acceleration(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        x: f64,
        y: f64,
        z: f64,
    );
    fn geometry_msgs_accel_with_covariance_stamped_builder_set_covariance(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        cov: *const f64,
    ) -> i32;
    fn geometry_msgs_accel_with_covariance_stamped_builder_encode_into(
        b: *mut geometry_msgs_accel_with_covariance_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_polygon_builder_new() -> *mut geometry_msgs_polygon_builder_t;
    fn geometry_msgs_polygon_builder_free(b: *mut geometry_msgs_polygon_builder_t);
    fn geometry_msgs_polygon_builder_set_points(
        b: *mut geometry_msgs_polygon_builder_t,
        xyz: *const f32,
        count: usize,
    ) -> i32;
    fn geometry_msgs_polygon_builder_encode_into(
        b: *mut geometry_msgs_polygon_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_polygon_stamped_builder_new() -> *mut geometry_msgs_polygon_stamped_builder_t;
    fn geometry_msgs_polygon_stamped_builder_free(b: *mut geometry_msgs_polygon_stamped_builder_t);
    fn geometry_msgs_polygon_stamped_builder_set_stamp(
        b: *mut geometry_msgs_polygon_stamped_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_polygon_stamped_builder_set_frame_id(
        b: *mut geometry_msgs_polygon_stamped_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_polygon_stamped_builder_set_points(
        b: *mut geometry_msgs_polygon_stamped_builder_t,
        xyz: *const f32,
        count: usize,
    ) -> i32;
    fn geometry_msgs_polygon_stamped_builder_encode_into(
        b: *mut geometry_msgs_polygon_stamped_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn geometry_msgs_pose_array_builder_new() -> *mut geometry_msgs_pose_array_builder_t;
    fn geometry_msgs_pose_array_builder_free(b: *mut geometry_msgs_pose_array_builder_t);
    fn geometry_msgs_pose_array_builder_set_stamp(
        b: *mut geometry_msgs_pose_array_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn geometry_msgs_pose_array_builder_set_frame_id(
        b: *mut geometry_msgs_pose_array_builder_t,
        s: *const c_char,
    ) -> i32;
    fn geometry_msgs_pose_array_builder_set_poses(
        b: *mut geometry_msgs_pose_array_builder_t,
        poses: *const f64,
        count: usize,
    ) -> i32;
    fn geometry_msgs_pose_array_builder_encode_into(
        b: *mut geometry_msgs_pose_array_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn nav_msgs_odometry_builder_new() -> *mut nav_msgs_odometry_builder_t;
    fn nav_msgs_odometry_builder_free(b: *mut nav_msgs_odometry_builder_t);
    fn nav_msgs_odometry_builder_set_stamp(
        b: *mut nav_msgs_odometry_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn nav_msgs_odometry_builder_set_frame_id(
        b: *mut nav_msgs_odometry_builder_t,
        s: *const c_char,
    ) -> i32;
    fn nav_msgs_odometry_builder_set_child_frame_id(
        b: *mut nav_msgs_odometry_builder_t,
        s: *const c_char,
    ) -> i32;
    fn nav_msgs_odometry_builder_set_pose(
        b: *mut nav_msgs_odometry_builder_t,
        px: f64,
        py: f64,
        pz: f64,
        ox: f64,
        oy: f64,
        oz: f64,
        ow: f64,
    );
    fn nav_msgs_odometry_builder_set_pose_covariance(
        b: *mut nav_msgs_odometry_builder_t,
        cov: *const f64,
    ) -> i32;
    fn nav_msgs_odometry_builder_set_twist(
        b: *mut nav_msgs_odometry_builder_t,
        lx: f64,
        ly: f64,
        lz: f64,
        ax: f64,
        ay: f64,
        az: f64,
    );
    fn nav_msgs_odometry_builder_set_twist_covariance(
        b: *mut nav_msgs_odometry_builder_t,
        cov: *const f64,
    ) -> i32;
    fn nav_msgs_odometry_builder_encode_into(
        b: *mut nav_msgs_odometry_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;
    fn nav_msgs_odometry_builder_build(
        b: *mut nav_msgs_odometry_builder_t,
        out: *mut *mut u8,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_altitude_builder_new() -> *mut mavros_msgs_altitude_builder_t;
    fn mavros_msgs_altitude_builder_free(b: *mut mavros_msgs_altitude_builder_t);
    fn mavros_msgs_altitude_builder_set_stamp(
        b: *mut mavros_msgs_altitude_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_altitude_builder_set_frame_id(
        b: *mut mavros_msgs_altitude_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_altitude_builder_set_monotonic(b: *mut mavros_msgs_altitude_builder_t, v: f32);
    fn mavros_msgs_altitude_builder_set_amsl(b: *mut mavros_msgs_altitude_builder_t, v: f32);
    fn mavros_msgs_altitude_builder_set_local(b: *mut mavros_msgs_altitude_builder_t, v: f32);
    fn mavros_msgs_altitude_builder_set_relative(b: *mut mavros_msgs_altitude_builder_t, v: f32);
    fn mavros_msgs_altitude_builder_set_terrain(b: *mut mavros_msgs_altitude_builder_t, v: f32);
    fn mavros_msgs_altitude_builder_set_bottom_clearance(
        b: *mut mavros_msgs_altitude_builder_t,
        v: f32,
    );
    fn mavros_msgs_altitude_builder_encode_into(
        b: *mut mavros_msgs_altitude_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_vfrhud_builder_new() -> *mut mavros_msgs_vfrhud_builder_t;
    fn mavros_msgs_vfrhud_builder_free(b: *mut mavros_msgs_vfrhud_builder_t);
    fn mavros_msgs_vfrhud_builder_set_stamp(
        b: *mut mavros_msgs_vfrhud_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_vfrhud_builder_set_frame_id(
        b: *mut mavros_msgs_vfrhud_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_vfrhud_builder_set_airspeed(b: *mut mavros_msgs_vfrhud_builder_t, v: f32);
    fn mavros_msgs_vfrhud_builder_set_groundspeed(b: *mut mavros_msgs_vfrhud_builder_t, v: f32);
    fn mavros_msgs_vfrhud_builder_set_heading(b: *mut mavros_msgs_vfrhud_builder_t, v: i16);
    fn mavros_msgs_vfrhud_builder_set_throttle(b: *mut mavros_msgs_vfrhud_builder_t, v: f32);
    fn mavros_msgs_vfrhud_builder_set_altitude(b: *mut mavros_msgs_vfrhud_builder_t, v: f32);
    fn mavros_msgs_vfrhud_builder_set_climb(b: *mut mavros_msgs_vfrhud_builder_t, v: f32);
    fn mavros_msgs_vfrhud_builder_encode_into(
        b: *mut mavros_msgs_vfrhud_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;
